# agentfs

./: CHANGELOG.md  SPEC.md  dist-workspace.toml
.claude/commands/: generate-py-sdk.md
cli/: Cargo.toml  build.rs
cli/src/: fuse.rs  main.rs  nfs.rs  parser.rs
cli/src/cmd/: fs.rs  init.rs  mcp_server.rs  mod.rs  mount.rs  mount_fskit.rs  ps.rs
cli/src/fuser/: session.rs
cli/src/sandbox/: linux.rs  overlay.rs
cli/tests/: test-run-syscalls.sh
fskit-extension/: .gitignore
fskit-extension/AgentFS/: Info.plist  main.swift
fskit-extension/AgentFS.xcodeproj/: project.pbxproj
fskit-extension/AgentFSExtension/: AgentFSExtension.entitlements  AgentFSExtension.swift  AgentFileSystem.swift  AgentItem.swift  AgentVolume.swift  ExtensionInfo.plist
fskit-ffi/: .gitignore  Cargo.toml  Makefile  agentfs_ffi.h  build.rs  cbindgen.toml
fskit-ffi/src/: lib.rs
sandbox/: Cargo.toml
sdk/rust/: Cargo.toml
sdk/rust/benches/: overlayfs.rs
sdk/rust/src/: connection_pool.rs  error.rs  kvstore.rs  lib.rs  toolcalls.rs
sdk/rust/src/filesystem/: agentfs.rs  hostfs.rs  hostfs_darwin.rs  hostfs_linux.rs  mod.rs  overlayfs.rs
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: filesystem.ts
sdk/typescript/tests/: filesystem.test.ts
