[package]
name = "agentfs-ffi"
version = "0.1.0"
edition = "2021"
description = "C-compatible FFI layer for AgentFS, used by FSKit Swift extension"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
agentfs-sdk = { path = "../sdk/rust" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
libc = "0.2"
turso = "0.4.0-pre.17"

[build-dependencies]
cbindgen = "0.27"
